--- a/FactApp.Client/Pages/Home.razor
+++ b/FactApp.Client/Pages/Home.razor
@@ -1,7 +1,22 @@
 ﻿@page "/"
+@inject HttpClient http
+@inject IFactService _factService
 
-<PageTitle>Home</PageTitle>
+<MudContainer Class="d-flex align-center justify-center flex-column mud-width-full"  style="height:90vh;">
+    <MudText Typo="Typo.h5" Class="mb-5">@_fact.Fact (@_fact.Length chars)</MudText>
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="GetNewFact">New fact</MudButton>
+</MudContainer>
 
-<h1>Hello, world!</h1>
+@code{
+    private FactDto _fact = new();
 
-Welcome to your new app.
+    protected override async Task OnInitializedAsync()
+    {
+        await GetNewFact();
+    }
+    
+    private async Task GetNewFact()
+    {
+        _fact = await _factService.GetFact();
+    }
+}
