add list of facts

--- a/FactApp.Client/Layout/NavMenu.razor
+++ b/FactApp.Client/Layout/NavMenu.razor
@@ -3,4 +3,5 @@
 </MudDrawerHeader>
 <MudNavMenu>
     <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" Href="/">Home</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.List" Href="/list-of-facts">List of facts</MudNavLink>
 </MudNavMenu>
